--- a/pagebuilder.css
+++ b/pagebuilder.css
@@ -1054,6 +1054,7 @@ header .navbar-cta ul li a.btn-gophr_button_solid.btn:not(.btn-custom-typo):not(
 header .navbar-cta ul li a.btn-gophr_button_outline.btn:not(.btn-custom-typo):not(.btn-inherit) {
     font-weight: 600 !important;
 }
+header .menu-primary-inner {padding-left: 40px !important;}
 body[class*=hmenu-]:not(.hormenu-position-right) .navbar-nav-last > ul > li > a.btn, 
 body[class*=hmenu-]:not(.hormenu-position-right) .navbar-nav-last > ul:last-child > li:last-child > a.btn {
     padding-right: 44px !important;
