Navigation menu - Added comment only.

--- a/pagebuilder.css
+++ b/pagebuilder.css
@@ -1157,8 +1157,9 @@ footer .btn-container .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-no
 .gophr--browser-height.gophr--mod-stats-graph .row-parent {display: flex; align-items: center;}
 
 /* 
-- New setting for responsive navigation menu (Main Menu (Primary Menu) 2022)
-- Display menu on desktop and mobile for specific browser width
+- New setting for responsive navigation menu (Main Menu (Primary Menu) 2022).
+- Display menu on desktop and mobile for specific browser width.
+- These can be use for longer menus in the future. Only update media query max-width as necessary.
 */
 /*@media only screen and (max-width: 1160px) {
     .show-nav-left .mobmenu-overlay, .show-nav-right .mobmenu-overlay, .show-mob-menu-search .mobmenu-overlay {
